feat(db): save data to db

--- a/eu.conf
+++ b/eu.conf
@@ -1,5 +1,5 @@
 
-jetstream=enabled
+jetstream=enable
 system_account: SYS
 accounts {
     SYS:{
@@ -8,7 +8,7 @@ accounts {
       ]
     }
     JS: {
-    jetstream: enabled
+    jetstream: enable
     users: [
       { nkey: UCXM6WB24IS7Q3MKVRDAEZDLXJN4BCT2EADY7QFXOT5FHDLEF6VAZY5S }
     ]
@@ -31,7 +31,7 @@ gateway: {
   gateways: [
     {name:AP, url: "nats://na_1:7222"}
     {name:EU, url: "nats://eu_1:7222"}
-    {name:NA, url: "nats://na_1:7222"}
+    # {name:NA, url: "nats://na_1:7222"}
   ]
 }
 
