--- a/deployment/docker/docker-compose.db.yml
+++ b/deployment/docker/docker-compose.db.yml
@@ -16,7 +16,7 @@ services:
     networks:
       - nats_network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U daffaputra"]
+      test: ["CMD-SHELL", "pg_isready -U testing -d iot"]
       interval: 5s
       timeout: 5s
       retries: 10
