refactor(app): enable NA cluster

--- a/config/creds/eu.conf
+++ b/config/creds/eu.conf
@@ -17,7 +17,7 @@ gateway: {
   gateways: [
     {name:AP, url: "nats://ap_1:7222"}
     {name:EU, url: "nats://eu_1:7222"}
-    # {name:NA, url: "nats://na_1:7222"}
+    {name:NA, url: "nats://na_1:7222"}
   ]
 }
 server_tags: ["region=EU"]
