--- a/config/creds/ap.conf
+++ b/config/creds/ap.conf
@@ -18,7 +18,7 @@ gateway: {
   gateways: [
     {name:AP, url: "nats://ap_1:7222"}
     {name:EU, url: "nats://eu_1:7222"}
-    # {name:NA, url: "nats://na_1:7222"}
+    {name:NA, url: "nats://na_1:7222"}
   ]
 }
 
