--- a/deployment/prometheus/prometheus.yml
+++ b/deployment/prometheus/prometheus.yml
@@ -1,11 +1,11 @@
 global:
   scrape_interval: 3s
   external_labels:
-    monitor: "nats-surveyor"
+    monitor: "monitor"
 
 # A scrape configuration containing exactly one endpoint to scrape.
 scrape_configs:
-  - job_name: "surveyor"
+  - job_name: "monitor"
     scrape_interval: 5s
     static_configs:
       - targets: ["prometheus-nats-exporter:7777"]
